# application-services

./: .buildconfig-android.yml  Cargo.toml
book/: 404.html  adding-docs.html  android-faqs.html  build-and-publish-pipeline.html  building.html  components-strategy.html  contributing.html  dependency-management.html  index.html  logging.html  metrics.html  naming-conventions.html  print.html  sync-overview.html
book/adr/: 0000-use-markdown-architectural-decision-records.html  0001-update-logins-api.html  0002-database-corruption.html  index.html
book/design/: megazords.html  test-faster.html
book/howtos/: adding-a-new-component.html  building-a-rust-component.html  consuming-rust-components-on-ios.html  converting-a-component-to-uniffi.html  cut-a-new-release.html  locally-building-jna.html  locally-published-components-in-fenix.html  locally-published-components-in-ios.html  smoke-testing-app-services.html  testing-a-rust-component.html  upgrading-nss-guide.html  when-to-use-what-in-the-ffi.html
book/rust-docs/: search-index.js  source-files.js
book/rust-docs/places/: all.html
components/nimbus/: Cargo.toml
components/nimbus/src/: error.rs  nimbus.udl
components/remote_settings/: Cargo.toml  build.rs  uniffi.toml
components/remote_settings/android/: build.gradle
components/remote_settings/android/src/main/: AndroidManifest.xml
components/remote_settings/src/: config.rs  error.rs  lib.rs  remotesettings.udl
docs/howtos/: adding-a-new-component.md
megazords/full/: Cargo.toml
megazords/full/src/: lib.rs
megazords/ios-rust/: Cargo.toml
(+41 files in other folders)
