[package]
name = "remote_settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "^0.21"
uniffi_macros = "^0.21"
thiserror = "1.0"
rs_client = { path = "../support/rs_client" }

[build-dependencies]
uniffi_build = { version = "^0.21", features=["builtin-bindgen"] }